change js to ts & add uuids to datas

--- a/exampleFiles/test.resx
+++ b/exampleFiles/test.resx
@@ -1,166 +1,72 @@
+<?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!-- XML-Namespace und Standardinformationen -->
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+    <xsd:import namespace="http://www.w3.org/XML/1998/namespace"/>
     <xsd:element name="root" msdata:IsDataSet="true">
       <xsd:complexType>
         <xsd:choice maxOccurs="unbounded">
-          <xsd:element name="data">
+          <xsd:element name="metadata">
             <xsd:complexType>
               <xsd:sequence>
                 <xsd:element name="value" type="xsd:string" minOccurs="0"/>
-                <xsd:element name="comment" type="xsd:string" minOccurs="0"/>
+              </xsd:sequence>
+              <xsd:attribute name="name" use="required" type="xsd:string"/>
+              <xsd:attribute name="type" type="xsd:string"/>
+              <xsd:attribute name="mimetype" type="xsd:string"/>
+              <xsd:attribute ref="xml:space"/>
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="assembly">
+            <xsd:complexType>
+              <xsd:attribute name="alias" type="xsd:string"/>
+              <xsd:attribute name="name" type="xsd:string"/>
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="data">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1"/>
+                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2"/>
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1"/>
+              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3"/>
+              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4"/>
+              <xsd:attribute ref="xml:space"/>
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="resheader">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1"/>
               </xsd:sequence>
               <xsd:attribute name="name" type="xsd:string" use="required"/>
-              <xsd:attribute name="xml:space" default="preserve"/>
             </xsd:complexType>
           </xsd:element>
         </xsd:choice>
       </xsd:complexType>
     </xsd:element>
   </xsd:schema>
+  <resheader name="resmimetype">
+    <value>text/microsoft-resx</value>
+  </resheader>
+  <resheader name="version">
+    <value>2.0</value>
+  </resheader>
+  <resheader name="reader">
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </resheader>
+  <resheader name="writer">
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </resheader>
 
-  <!-- Ressourcen-Daten -->
-  <data name="WelcomeMessage" xml:space="preserve">
-    <value>Willkommen zur Anwendung!</value>
-    <comment>Begrüßungstext für die Startseite</comment>
-  </data>
 
-  <data name="ExitPrompt" xml:space="preserve">
-    <value>Möchten Sie die Anwendung wirklich beenden?</value>
-  </data>
-
-<data name="new entry" xml:space="preserve">
-	<value></value>
-	<comment></comment>
+<data id="2971c416-d8d4-4c36-9e70-04a799ec8067" name="MainButton_Click" xml:space="preserve">
+	<value>Hinzufügen</value>
+	<comment>Add new Entry</comment>
+</data>
+<data id="91ae487a-04f6-464d-9721-52494d2c2ed2" name="MainButton_Delete" xml:space="preserve">
+	<value>Löschen</value>
+	<comment>Wird zum löschen benötigt</comment>
 </data>
 
-<data name="new entry" xml:space="preserve">
-	<value></value>
-	<comment></comment>
-</data>
-
-<data name="new entry" xml:space="preserve">
-	<value></value>
-	<comment></comment>
-</data>
-
-<data name="new entry" xml:space="preserve">
-	<value></value>
-	<comment></comment>
-</data>
-
-<data name="new entry" xml:space="preserve">
-	<value></value>
-	<comment></comment>
-</data>
-
-<data name="new entry" xml:space="preserve">
-	<value></value>
-	<comment></comment>
-</data>
-
-<data name="new entry" xml:space="preserve">
-	<value></value>
-	<comment></comment>
-</data>
-
-<data name="new entry" xml:space="preserve">
-	<value></value>
-	<comment></comment>
-</data>
-
-<data name="new entry" xml:space="preserve">
-	<value></value>
-	<comment></comment>
-</data>
-
-<data name="new entry" xml:space="preserve">
-	<value></value>
-	<comment></comment>
-</data>
-
-<data name="new entry" xml:space="preserve">
-	<value></value>
-	<comment></comment>
-</data>
-
-<data name="new entry" xml:space="preserve">
-	<value></value>
-	<comment></comment>
-</data>
-
-<data name="new entry" xml:space="preserve">
-	<value></value>
-	<comment></comment>
-</data>
-
-<data name="new entry" xml:space="preserve">
-	<value></value>
-	<comment></comment>
-</data>
-
-<data name="new entry" xml:space="preserve">
-	<value></value>
-	<comment></comment>
-</data>
-
-<data name="new entry" xml:space="preserve">
-	<value></value>
-	<comment></comment>
-</data>
-
-<data name="new entry" xml:space="preserve">
-	<value></value>
-	<comment></comment>
-</data>
-
-<data name="new entry" xml:space="preserve">
-	<value></value>
-	<comment></comment>
-</data>
-
-<data name="new entry" xml:space="preserve">
-	<value></value>
-	<comment></comment>
-</data>
-
-<data name="new entry" xml:space="preserve">
-	<value></value>
-	<comment></comment>
-</data>
-
-<data name="new entry" xml:space="preserve">
-	<value></value>
-	<comment></comment>
-</data>
-
-<data name="new entry" xml:space="preserve">
-	<value></value>
-	<comment></comment>
-</data>
-
-<data name="new entry" xml:space="preserve">
-	<value></value>
-	<comment></comment>
-</data>
-
-<data name="new entry" xml:space="preserve">
-	<value></value>
-	<comment></comment>
-</data>
-
-<data name="new entry" xml:space="preserve">
-	<value></value>
-	<comment></comment>
-</data>
-
-<data name="new entry" xml:space="preserve">
-	<value></value>
-	<comment></comment>
-</data>
-
-<data name="new entry" xml:space="preserve">
-	<value></value>
-	<comment></comment>
-</data>
 </root>
