fix warnings & add routes to constants

--- a/exampleFiles/SampleText.resx
+++ b/exampleFiles/SampleText.resx
@@ -155,5 +155,4 @@
 </data>
 <data name="Upload_Error" xml:space="preserve" id="20d99905-b882-4f75-a867-e3b26d8fe0e9">
   <value>Upload failed</value>
-</data>
-</root>
+</data></root>
